# landing

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  config.toml  flake.nix  result
assets/: stylesheet.css
routes/: index.html
src/: config.rs  environment.rs  error.rs  main.rs  router.rs  tailwind.rs  utils.rs
src/app/: mod.rs  state.rs
src/config/: inner.rs  mod.rs  watcher.rs
src/environment/: config.rs  mod.rs  tailwind.rs
src/services/: mod.rs  tailwind.rs  templates.rs
templates/: example.html  index.html
