[package]
name = "landing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2", "macros"] }
bytes = "1.11.1"
futures = { version = "0.3.32", features = ["thread-pool"] }
http = "1.4.2"
http-body = "1.0.1"
hyper = "1.10.1"
itertools = "0.14.0"
minijinja = "2.20.0"
notify = "8.2.0"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tailwind-css = "0.13.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
